--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -12,11 +12,12 @@ build-type:          Simple
 cabal-version:       >=1.16
 
 library
-  exposed-modules: 
+  exposed-modules:
     URI.ByteString
 
-  build-depends:       
-      base       >= 4.6  && < 4.8
+  build-depends:
+      attoparsec >= 0.12 && < 1.0
+    , base       >= 4.6  && < 4.8
     , bytestring >= 0.10 && < 0.11
     , errors     >= 1.4  && < 1.5
     , pcre-light >= 0.4  && < 0.5
@@ -29,13 +30,15 @@ library
 test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
-  hs-source-dirs: test
+  hs-source-dirs: src, test
   build-depends:
       HUnit
+    , tasty
+    , tasty-hunit
+    , attoparsec >= 0.12 && < 1.0
     , base       >= 4.6  && < 4.8
     , bytestring >= 0.10 && < 0.11
     , errors     >= 1.4  && < 1.5
     , pcre-light >= 0.4  && < 0.5
     , text       >= 1.1  && < 1.2
   default-language:    Haskell2010
-
