--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -16,12 +16,12 @@ library
     URI.ByteString
 
   build-depends:
-      attoparsec >= 0.12 && < 1.0
-    , base       >= 4.6  && < 4.8
-    , bytestring >= 0.10 && < 0.11
-    , errors     >= 1.4  && < 1.5
-    , pcre-light >= 0.4  && < 0.5
-    , text       >= 1.1  && < 1.2
+      attoparsec       >= 0.12    && < 1.0
+    , deepseq          >= 1.3.0.2 && < 2.0
+    , deepseq-generics >= 0.1.1.1 && < 1.0
+    , base             >= 4.6     && < 4.8
+    , bytestring       >= 0.10    && < 0.11
+    , errors           >= 1.4     && < 1.5
 
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -35,10 +35,22 @@ test-suite test
       HUnit
     , tasty
     , tasty-hunit
+    , file-embed
     , attoparsec >= 0.12 && < 1.0
     , base       >= 4.6  && < 4.8
     , bytestring >= 0.10 && < 0.11
     , errors     >= 1.4  && < 1.5
-    , pcre-light >= 0.4  && < 0.5
-    , text       >= 1.1  && < 1.2
   default-language:    Haskell2010
+
+benchmark bench
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  hs-source-dirs: src, bench
+  build-depends:
+      criterion
+    , attoparsec       >= 0.12    && < 1.0
+    , deepseq          >= 1.3.0.2 && < 2.0
+    , deepseq-generics >= 0.1.1.1 && < 1.0
+    , base             >= 4.6     && < 4.8
+    , bytestring       >= 0.10    && < 0.11
+    , errors           >= 1.4     && < 1.5
