--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -22,6 +22,7 @@ library
     , base             >= 4.6     && < 4.8
     , bytestring       >= 0.10    && < 0.11
     , errors           >= 1.4     && < 1.5
+    , http-types       >= 0.8.5   && < 1.0
 
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -35,11 +36,13 @@ test-suite test
       HUnit
     , tasty
     , tasty-hunit
-    , file-embed
-    , attoparsec >= 0.12 && < 1.0
-    , base       >= 4.6  && < 4.8
-    , bytestring >= 0.10 && < 0.11
-    , errors     >= 1.4  && < 1.5
+    , attoparsec       >= 0.12    && < 1.0
+    , deepseq          >= 1.3.0.2 && < 2.0
+    , deepseq-generics >= 0.1.1.1 && < 1.0
+    , base             >= 4.6     && < 4.8
+    , bytestring       >= 0.10    && < 0.11
+    , errors           >= 1.4     && < 1.5
+    , http-types       >= 0.8.5   && < 1.0
   default-language:    Haskell2010
 
 benchmark bench
@@ -54,3 +57,4 @@ benchmark bench
     , base             >= 4.6     && < 4.8
     , bytestring       >= 0.10    && < 0.11
     , errors           >= 1.4     && < 1.5
+    , http-types       >= 0.8.5   && < 1.0
