--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -34,8 +34,11 @@ test-suite test
   hs-source-dirs: src, test
   build-depends:
       HUnit
+    , QuickCheck
     , tasty
     , tasty-hunit
+    , tasty-quickcheck
+    , derive
     , attoparsec       >= 0.12    && < 1.0
     , deepseq          >= 1.3.0.2 && < 2.0
     , deepseq-generics >= 0.1.1.1 && < 1.0
