--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -48,6 +48,27 @@ test-suite test
     , http-types       >= 0.8.5   && < 1.0
   default-language:    Haskell2010
 
+test-suite doctest
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  hs-source-dirs: src, doctest
+  build-depends:
+      HUnit
+    , QuickCheck
+    , tasty
+    , tasty-hunit
+    , tasty-quickcheck
+    , derive
+    , doctest
+    , attoparsec       >= 0.12    && < 1.0
+    , deepseq          >= 1.3.0.2 && < 2.0
+    , deepseq-generics >= 0.1.1.1 && < 1.0
+    , base             >= 4.6     && < 4.8
+    , bytestring       >= 0.10    && < 0.11
+    , errors           >= 1.4     && < 1.5
+    , http-types       >= 0.8.5   && < 1.0
+  default-language:    Haskell2010
+
 benchmark bench
   type: exitcode-stdio-1.0
   main-is: Main.hs
