--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -73,6 +73,7 @@ benchmark bench
   type: exitcode-stdio-1.0
   main-is: Main.hs
   hs-source-dirs: src, bench
+  default-language:    Haskell2010
   build-depends:
       criterion
     , attoparsec       >= 0.12    && < 0.13
