--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -17,8 +17,6 @@ library
 
   build-depends:
       attoparsec       >= 0.12    && < 0.13
-    , deepseq          >= 1.3     && < 1.4
-    , deepseq-generics >= 0.1     && < 0.2
     , base             >= 4.6     && < 4.8
     , bytestring       >= 0.10    && < 0.11
     , http-types       >= 0.8.5   && < 0.9
@@ -30,55 +28,41 @@ library
 test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
-  hs-source-dirs: src, test
+  hs-source-dirs: test
   build-depends:
-      HUnit
+      uri-bytestring
+    , HUnit
     , QuickCheck
     , tasty
     , tasty-hunit
     , tasty-quickcheck
     , derive
-    , attoparsec       >= 0.12    && < 0.13
-    , deepseq          >= 1.3     && < 1.4
-    , deepseq-generics >= 0.1     && < 0.2
-    , base             >= 4.6     && < 4.8
-    , bytestring       >= 0.10    && < 0.11
-    , errors           >= 1.4     && < 1.5
-    , http-types       >= 0.8.5   && < 0.9
+    , attoparsec
+    , base
+    , bytestring
   default-language:    Haskell2010
 
 test-suite doctest
   type: exitcode-stdio-1.0
   main-is: Main.hs
-  hs-source-dirs: src, doctest
+  hs-source-dirs: doctest
   build-depends:
-      HUnit
-    , QuickCheck
-    , tasty
-    , tasty-hunit
-    , tasty-quickcheck
-    , derive
+      base
+    , uri-bytestring
     , doctest
-    , attoparsec       >= 0.12    && < 0.13
-    , deepseq          >= 1.3     && < 1.4
-    , deepseq-generics >= 0.1     && < 0.2
-    , base             >= 4.6     && < 4.8
-    , bytestring       >= 0.10    && < 0.11
-    , errors           >= 1.4     && < 1.5
-    , http-types       >= 0.8.5   && < 0.9
+    , http-types
   default-language:    Haskell2010
 
 benchmark bench
   type: exitcode-stdio-1.0
   main-is: Main.hs
-  hs-source-dirs: src, bench
+  hs-source-dirs: bench
   default-language:    Haskell2010
   build-depends:
-      criterion
-    , attoparsec       >= 0.12    && < 0.13
-    , deepseq          >= 1.3     && < 1.4
-    , deepseq-generics >= 0.1     && < 0.2
-    , base             >= 4.6     && < 4.8
-    , bytestring       >= 0.10    && < 0.11
-    , errors           >= 1.4     && < 1.5
-    , http-types       >= 0.8.5   && < 0.9
+      base
+    , uri-bytestring
+    , criterion
+    , statistics < 0.11
+    , hastache < 0.6
+    , deepseq >= 1.3 && < 1.4
+    , deepseq-generics >= 0.1 && < 0.2
