--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -66,3 +66,7 @@ benchmark bench
     , hastache < 0.6
     , deepseq >= 1.3 && < 1.4
     , deepseq-generics >= 0.1 && < 0.2
+
+source-repository head
+  type:     git
+  location: git://github.com/Soostone/uri-bytestring.git
