--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -22,6 +22,7 @@ library
     , bytestring       >= 0.9     && < 0.11
     , http-types       >= 0.8.5   && < 0.9
     , safecopy         >= 0.7     && < 0.9
+    , cereal
 
   hs-source-dirs:      src
   default-language:    Haskell2010
