--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -26,7 +26,7 @@ library
 
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options: -O2 -Wall -Werror
+  ghc-options: -O2 -Wall
 
 test-suite test
   type: exitcode-stdio-1.0
