--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -3,7 +3,8 @@ version:             0.0
 synopsis:            Haskell URI parsing as ByteStrings
 -- description:
 license:             BSD3
-license-file:        LICENSE
+license-files:       LICENSE
+                   , licenses/http-types/LICENSE
 author:              Doug Beardsley
 maintainer:          michael@michaelxavier.net
 copyright:           Soostone Inc.
@@ -20,7 +21,6 @@ library
       attoparsec       >= 0.10    && < 0.13
     , base             >= 4.6     && < 4.8
     , bytestring       >= 0.9     && < 0.11
-    , http-types       >= 0.8.5   && < 0.9
     , safecopy         >= 0.7     && < 0.9
 
   hs-source-dirs:      src
@@ -52,7 +52,6 @@ test-suite doctest
       base
     , uri-bytestring
     , doctest
-    , http-types
   default-language:    Haskell2010
 
 benchmark bench
