--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -59,6 +59,7 @@ benchmark bench
   main-is: Main.hs
   hs-source-dirs: bench
   default-language:    Haskell2010
+  ghc-options: -O2
   build-depends:
       base
     , uri-bytestring
