--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -67,6 +67,7 @@ benchmark bench
     , statistics < 0.11
     , deepseq >= 1.3 && < 1.4
     , deepseq-generics >= 0.1 && < 0.2
+    , network-uri >= 2.6.0.1 && < 2.7
 
 source-repository head
   type:     git
