--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: haskell
 ghc:
   - 7.8
   - 7.6
-script:
-  - cabal configure --enable-tests --enable-benchmarks && cabal build && cabal test && cabal bench
 install:
   - cabal install --only-dependencies --enable-tests --enable-benchmarks
+  - cabal install doctest
+script:
+  - cabal configure --enable-tests --enable-benchmarks && cabal build && cabal test && doctest -isrc -XOverloadedStrings src/URI/ByteString.hs && cabal bench
