--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -44,16 +44,6 @@ test-suite test
     , bytestring
   default-language:    Haskell2010
 
-test-suite doctest
-  type: exitcode-stdio-1.0
-  main-is: Main.hs
-  hs-source-dirs: doctest
-  build-depends:
-      base
-    , uri-bytestring
-    , doctest
-  default-language:    Haskell2010
-
 benchmark bench
   type: exitcode-stdio-1.0
   main-is: Main.hs
@@ -64,10 +54,9 @@ benchmark bench
       base
     , uri-bytestring
     , criterion
-    , statistics < 0.11
-    , deepseq >= 1.3 && < 1.4
-    , deepseq-generics >= 0.1 && < 0.2
-    , network-uri >= 2.6.0.1 && < 2.7
+    , deepseq
+    , deepseq-generics
+    , network-uri
 
 source-repository head
   type:     git
