--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -1,16 +1,26 @@
 name:                uri-bytestring
-version:             0.0
+version:             0.0.1
 synopsis:            Haskell URI parsing as ByteStrings
 description: uri-bytestring aims to be an RFC3986 compliant URI parser that uses efficient ByteStrings for parsing and representing the URI data.
 license:             BSD3
 license-files:       LICENSE
                    , licenses/http-types/LICENSE
-author:              Doug Beardsley
-maintainer:          michael@michaelxavier.net
+author:              Doug Beardsley, Michael Xavier
+maintainer:          Michael Xavier <michael.xavier@soostone.com>
 copyright:           Soostone Inc.
 category:            Web
 build-type:          Simple
 cabal-version:       >=1.16
+homepage:            https://travis-ci.org/Soostone/uri-bytestring
+bug-reports:         https://travis-ci.org/Soostone/uri-bytestring/issues
+extra-source-files:
+  README.md
+  changelog.md
+  bench/*.hs
+
+flag lib-Werror
+  default: False
+  manual: True
 
 library
   exposed-modules:
@@ -24,7 +34,10 @@ library
 
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options: -O2 -Wall -Werror
+  ghc-options: -O2
+
+  if flag(lib-Werror)
+    ghc-options: -Wall -Werror
 
 test-suite test
   type: exitcode-stdio-1.0
