--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -30,7 +30,7 @@ library
 
       attoparsec       >= 0.10    && < 0.13
     , base             >= 4.6     && < 4.8
-    , bytestring       >= 0.9     && < 0.11
+    , bytestring       >= 0.10.2.0 && < 0.11
 
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -67,6 +67,7 @@ benchmark bench
     , deepseq
     , deepseq-generics
     , network-uri
+    , bytestring
 
 source-repository head
   type:     git
