--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,58 @@
 language: haskell
-ghc:
-  - 7.8
-  - 7.6
-  - '7.10'
+
+env:
+  - GHCVER=7.6.3
+  - GHCVER=7.8.4
+  - GHCVER=7.10.1
+
+before_install:
+  # If $GHCVER is the one travis has, don't bother reinstalling it.
+  # We can also have faster builds by installing some libraries with
+  # `apt`. If it isn't, install the GHC we want from hvr's PPA along
+  # with cabal-1.18.
+  - |
+    if [ $GHCVER = `ghc --numeric-version` ]; then
+      # Try installing some of the build-deps with apt-get for speed.
+      travis/cabal-apt-install --enable-tests $MODE
+      export CABAL=cabal
+    else
+      # Install the GHC we want from hvr's PPA
+      travis_retry sudo add-apt-repository -y ppa:hvr/ghc
+      travis_retry sudo apt-get update
+      travis_retry sudo apt-get install cabal-install-1.18 ghc-$GHCVER happy
+      export CABAL=cabal-1.18
+      export PATH=/opt/ghc/$GHCVER/bin:$PATH
+    fi
+  # Uncomment whenever hackage is down.
+  # - mkdir -p ~/.cabal && cp travis/config ~/.cabal/config && $CABAL update
+  - $CABAL update
+
+  # Update happy when building with GHC head
+  - |
+    if [ $GHCVER = "7.8.4" ] || [ $GHCVER = "7.10.1" ]; then
+      $CABAL install --constraint=transformers\ installed happy alex
+      export PATH=$HOME/.cabal/bin:$PATH
+    fi
+
 install:
-  - cabal install happy alex
-  - cabal install doctest
-  - cabal install --only-dependencies --enable-tests --enable-benchmarks
+  - $CABAL install --dependencies-only --enable-tests --enable-benchmarks
+  - $CABAL configure --enable-tests --enable-benchmarks -flib-Werror
+
 script:
-  - cabal configure --enable-tests --enable-benchmarks -flib-Werror && cabal build && cabal test && make doctest && cabal bench
+  - $CABAL build
+  - $CABAL test --show-details=always
+  - make doctest
+  - $CABAL bench
+
+  # tests that a source-distribution can be generated
+  - $CABAL sdist
+
+  # check that the generated source-distribution can be built & installed
+  - export SRC_TGZ=$(cabal info . | awk '{print $2 ".tar.gz";exit}') ;
+    cd dist/;
+    if [ -f "$SRC_TGZ" ]; then
+       $CABAL install --force-reinstalls "$SRC_TGZ";
+    else
+       echo "expected '$SRC_TGZ' not found";
+       exit 1;
+    fi
