--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -60,6 +60,7 @@ test-suite test
     , derive
     , attoparsec
     , base
+    , blaze-builder
     , bytestring
     , lens
     , quickcheck-instances
