--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -49,6 +49,9 @@ library
 test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
+  other-modules:
+    URI.ByteString.Arbitrary
+    URI.ByteStringTests
   hs-source-dirs: test
   build-depends:
       uri-bytestring
