--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -70,6 +70,8 @@ test-suite test
     , bytestring
     , lens
     , quickcheck-instances
+    -- void currently breaks with semigroups 0.17
+    , semigroups < 0.17
   default-language:    Haskell2010
 
   if flag(lib-Werror)
