--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -44,6 +44,9 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
 
+  if impl(ghc >= 7.8)
+    cpp-options: -DWITH_TYPEABLE
+
   if flag(lib-Werror)
     ghc-options: -Werror
 
