--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,13 @@ addons:
 # The different configurations we want to test. You could also do things like
 # change flags or use --stack-yaml to point to a different file.
 env:
-- ARGS="--resolver=lts-2"
+- ARGS="--stack-yaml=stack-lts-2.yaml"
 - ARGS="--resolver=lts-3"
 - ARGS="--resolver=lts-4"
 - ARGS="--resolver=lts-5"
 - ARGS="--resolver=lts-6"
-- ARGS="--resolver=nightly"
+# Builds OK with ghc 8 but test dependencies don't. Revisit this later.
+# - ARGS="--resolver=nightly"
 
 before_install:
 # Download and unpack the stack executable
