--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,9 @@ before_install:
 # around some quirks in Travis's terminal implementation.
 script:
   - stack $ARGS setup
-  - stack $ARGS test $BUILDFLAGS --no-terminal --haddock --no-haddock-deps
+  - stack $ARGS test --no-terminal --haddock --no-haddock-deps
   - stack $ARGS bench
-  - stack $ARGS build $BUILDFLAGS
+  - stack $ARGS build
   - stack $ARGS sdist
 
 # Caching so the next build will be fast too.
