--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -40,6 +40,7 @@ library
     , base             >= 4.6     && < 4.10
     , bytestring       >= 0.9.1   && < 0.11
     , blaze-builder    >= 0.3.0.0 && < 0.5
+    , containers
 
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -74,6 +75,7 @@ test-suite test
     , lens-simple
     , quickcheck-instances
     , semigroups
+    , containers
   default-language:    Haskell2010
 
   if flag(lib-Werror)
