--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -67,7 +67,6 @@ test-suite test
     , tasty
     , tasty-hunit
     , tasty-quickcheck
-    , derive
     , attoparsec
     , base
     , blaze-builder
@@ -76,6 +75,7 @@ test-suite test
     , quickcheck-instances
     , semigroups
     , containers
+    , generics-sop >= 0.2
   default-language:    Haskell2010
 
   if flag(lib-Werror)
