--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
 # change flags or use --stack-yaml to point to a different file.
 env:
 - ARGS="--stack-yaml=stack-lts-2.yaml"
-- ARGS="--resolver=lts-3"
+- ARGS="--stack-yaml=stack-lts-3.yaml"
 - ARGS="--resolver=lts-4"
 - ARGS="--resolver=lts-5"
 - ARGS="--resolver=lts-6"
