--- a/stack-lts-2.yaml
+++ b/stack-lts-2.yaml
@@ -5,6 +5,8 @@ extra-deps:
   - lens-simple-0.1.0.8
   - lens-family-1.2.0
   - generics-sop-0.2.2.0
+  - th-lift-instances-0.1.11
+  - th-lift-0.7.6
 flags:
   uri-bytestring:
     lib-Werror: true
