--- a/stack-lts-3.yaml
+++ b/stack-lts-3.yaml
@@ -3,6 +3,7 @@ packages:
   - '.'
 extra-deps:
   - generics-sop-0.2.2.0
+  - th-lift-instances-0.1.11
 flags:
   uri-bytestring:
     lib-Werror: true
