Allow nightly failure due to casaava
Seems like cassava and thus criterion are currently incompatible with
the new vectors release.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,18 @@ addons:
 
 # The different configurations we want to test. You could also do things like
 # change flags or use --stack-yaml to point to a different file.
-env:
-- ARGS="--stack-yaml=stack-lts-2.yaml"
-- ARGS="--stack-yaml=stack-lts-3.yaml"
-- ARGS="--resolver=lts-4"
-- ARGS="--resolver=lts-5"
-- ARGS="--resolver=lts-6"
-- ARGS=""
-- ARGS="--resolver=nightly"
+matrix:
+  include:
+    - env: ARGS="--stack-yaml=stack-lts-2.yaml"
+    - env: ARGS="--stack-yaml=stack-lts-3.yaml"
+    - env: ARGS="--resolver=lts-4"
+    - env: ARGS="--resolver=lts-5"
+    - env: ARGS="--resolver=lts-6"
+    - env: ARGS="--resolver=lts-7"
+    - env: ARGS="--resolver=lts-8"
+    - env: ARGS="--resolver=nightly"
+  allow_failures:
+    - env: ARGS="--resolver=nightly"
 
 before_install:
 # Download and unpack the stack executable
