--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 # Use new container infrastructure to enable caching
 sudo: false
+dist: trusty
 
 # Choose a lightweight base image; we provide our own build tools.
 language: c
@@ -16,6 +17,7 @@ matrix:
   include:
     - env: ARGS="--stack-yaml=stack-lts-2.yaml"
     - env: ARGS="--stack-yaml=stack-lts-3.yaml"
+    - env: ARGS="--stack-yaml=stack-ghc-8.2.1.yaml"
     - env: ARGS="--resolver=lts-4"
     - env: ARGS="--resolver=lts-5"
     - env: ARGS="--resolver=lts-6"
