--- a/stack-lts-2.yaml
+++ b/stack-lts-2.yaml
@@ -2,8 +2,7 @@ resolver: lts-2.12
 packages:
   - '.'
 extra-deps:
-  - lens-simple-0.1.0.8
-  - lens-family-1.2.0
+  - base-compat-0.9.3
   - generics-sop-0.2.2.0
   - th-lift-instances-0.1.11
   - th-lift-0.7.6
