--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -17,6 +17,7 @@ Tested-With:         GHC == 7.6.3
                    , GHC == 7.8.4
                    , GHC == 7.10.1
                    , GHC == 8.0.2
+                   , GHC == 8.2.1
 extra-source-files:
   README.md
   CONTRIBUTING.md
@@ -42,7 +43,7 @@ library
     , base             >= 4.6     && < 5
     , bytestring       >= 0.9.1   && < 0.11
     , blaze-builder    >= 0.3.0.0 && < 0.5
-    , template-haskell >= 2.9     && < 2.12
+    , template-haskell >= 2.9     && < 2.13
     , th-lift-instances >= 0.1.8  && < 0.2
     , containers
 
@@ -79,11 +80,12 @@ test-suite test
     , tasty-quickcheck
     , attoparsec
     , base
+    , base-compat >= 0.7.0
     , blaze-builder
     , bytestring
-    , lens-simple
     , quickcheck-instances
     , semigroups
+    , transformers
     , containers
     , generics-sop >= 0.2
   default-language:    Haskell2010
