--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -41,6 +41,7 @@ library
 
       attoparsec       >= 0.12    && < 0.14
     , base             >= 4.6     && < 5
+    , fail             >= 4.9     && < 5
     , bytestring       >= 0.9.1   && < 0.11
     , blaze-builder    >= 0.3.0.0 && < 0.5
     , template-haskell >= 2.9     && < 2.13
