--- a/stack-lts-2.yaml
+++ b/stack-lts-2.yaml
@@ -6,6 +6,7 @@ extra-deps:
   - generics-sop-0.2.2.0
   - th-lift-instances-0.1.11
   - th-lift-0.7.6
+  - fail-4.9.0.0
 flags:
   uri-bytestring:
     lib-Werror: true
