--- a/stack-lts-3.yaml
+++ b/stack-lts-3.yaml
@@ -4,6 +4,7 @@ packages:
 extra-deps:
   - generics-sop-0.2.2.0
   - th-lift-instances-0.1.11
+  - fail-4.9.0.0
 flags:
   uri-bytestring:
     lib-Werror: true
