Semigroup instance needs attoparsec-0.13.1.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
     - env: ARGS="--stack-yaml=stack-lts-2.yaml"
     - env: ARGS="--stack-yaml=stack-lts-3.yaml"
     - env: ARGS="--stack-yaml=stack-lts-4.yaml"
-    - env: ARGS="--resolver=lts-5"
+    - env: ARGS="--stack-yaml=stack-lts-5.yaml"
     - env: ARGS="--resolver=lts-6"
     - env: ARGS="--resolver=lts-7"
     - env: ARGS="--resolver=lts-8"
