--- a/stack-lts-2.yaml
+++ b/stack-lts-2.yaml
@@ -2,6 +2,7 @@ resolver: lts-2.12
 packages:
   - '.'
 extra-deps:
+  - attoparsec-0.13.2.0
   - base-compat-0.9.3
   - generics-sop-0.2.2.0
   - th-lift-instances-0.1.11
