--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ matrix:
     - env: ARGS="--resolver=lts-6"
     - env: ARGS="--resolver=lts-7"
     - env: ARGS="--resolver=lts-8"
+    - env: ARGS="--resolver=lts-9"
+    - env: ARGS="--resolver=lts-10"
     - env: ARGS="--resolver=nightly"
   allow_failures:
     - env: ARGS="--resolver=nightly"
