--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -1,5 +1,5 @@
 name:                uri-bytestring
-version:             0.3.1.0
+version:             0.3.1.1
 synopsis:            Haskell URI parsing as ByteStrings
 description: uri-bytestring aims to be an RFC3986 compliant URI parser that uses efficient ByteStrings for parsing and representing the URI data.
 license:             BSD3
@@ -17,6 +17,7 @@ Tested-With:         GHC == 7.8.4
                    , GHC == 7.10.1
                    , GHC == 8.0.2
                    , GHC == 8.2.1
+                   , GHC == 8.4.1
 extra-source-files:
   README.md
   CONTRIBUTING.md
@@ -43,7 +44,7 @@ library
     , fail             >= 4.9     && < 5
     , bytestring       >= 0.9.1   && < 0.11
     , blaze-builder    >= 0.3.0.0 && < 0.5
-    , template-haskell >= 2.9     && < 2.13
+    , template-haskell >= 2.9     && < 2.14
     , th-lift-instances >= 0.1.8  && < 0.2
     , containers
 
