--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -41,7 +41,6 @@ library
 
       attoparsec       >= 0.13.1.0 && < 0.14
     , base             >= 4.6     && < 5
-    , fail             >= 4.9     && < 5
     , bytestring       >= 0.9.1   && < 0.11
     , blaze-builder    >= 0.3.0.0 && < 0.5
     , template-haskell >= 2.9     && < 2.14
@@ -57,6 +56,7 @@ library
   if !impl(ghc >= 8)
     cpp-options: -DLIFT_COMPAT
     build-depends:
+      fail >= 4.9 && < 5,
       th-lift >= 0.7.5 && < 0.8,
       semigroups >= 0.16.2.2 && <0.19
 
