Introduce flag for exporting Arbitrary instance.  [WIP]

--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -28,6 +28,10 @@ flag lib-Werror
   default: False
   manual: True
 
+flag export-arbitrary
+  default: False
+  manual: True
+
 library
   exposed-modules:
     URI.ByteString
@@ -38,7 +42,6 @@ library
     URI.ByteString.Internal
 
   build-depends:
-
       attoparsec       >= 0.13.1.0 && < 0.14
     , base             >= 4.6     && < 5
     , bytestring       >= 0.9.1   && < 0.11
@@ -63,20 +66,27 @@ library
   if flag(lib-Werror)
     ghc-options: -Werror
 
+  if flag(export-arbitrary)
+    hs-source-dirs: test
+    exposed-modules:
+      URI.ByteString.Arbitrary
+    build-depends:
+        QuickCheck
+      , quickcheck-instances
+      , generics-sop >= 0.2
+
   ghc-options: -Wall
 
 test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
   other-modules:
-    URI.ByteString.Arbitrary
     URI.ByteStringTests
     URI.ByteStringQQTests
   hs-source-dirs: test
   build-depends:
       uri-bytestring
     , HUnit
-    , QuickCheck
     , tasty
     , tasty-hunit
     , tasty-quickcheck
@@ -85,15 +95,21 @@ test-suite test
     , base-compat >= 0.7.0
     , blaze-builder
     , bytestring
-    , quickcheck-instances
     , semigroups
     , transformers
     , containers
-    , generics-sop >= 0.2
   default-language:    Haskell2010
 
   if flag(lib-Werror)
     ghc-options: -Werror
+
+  if !flag(export-arbitrary)
+    other-modules:
+      URI.ByteString.Arbitrary
+    build-depends:
+        QuickCheck
+      , quickcheck-instances
+      , generics-sop >= 0.2
 
   ghc-options: -Wall
 
