Partially revert "Introduce flag for exporting Arbitrary instance.  [WIP]"
This reverts commit d62a5e961cb033eb4dda77384054f468387fc8a4.

It appears that the test suite can redundantly contain the module that's
already compiled into the library.  Works better than when we try to sort
out the redundancy.

--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -81,12 +81,14 @@ test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
   other-modules:
+    URI.ByteString.Arbitrary
     URI.ByteStringTests
     URI.ByteStringQQTests
   hs-source-dirs: test
   build-depends:
       uri-bytestring
     , HUnit
+    , QuickCheck
     , tasty
     , tasty-hunit
     , tasty-quickcheck
@@ -95,21 +97,15 @@ test-suite test
     , base-compat >= 0.7.0
     , blaze-builder
     , bytestring
+    , quickcheck-instances
     , semigroups
     , transformers
     , containers
+    , generics-sop >= 0.2
   default-language:    Haskell2010
 
   if flag(lib-Werror)
     ghc-options: -Werror
-
-  if !flag(export-arbitrary)
-    other-modules:
-      URI.ByteString.Arbitrary
-    build-depends:
-        QuickCheck
-      , quickcheck-instances
-      , generics-sop >= 0.2
 
   ghc-options: -Wall
 
