--- a/uri-bytestring.cabal
+++ b/uri-bytestring.cabal
@@ -41,7 +41,8 @@ library
 
       attoparsec       >= 0.13.1.0 && < 0.14
     , base             >= 4.6     && < 5
-    , deepseq          >= 1.4     && < 2
+    , deepseq          >= 1.3
+    , deepseq-generics >= 0.1
     , bytestring       >= 0.9.1   && < 0.11
     , blaze-builder    >= 0.3.0.0 && < 0.5
     , template-haskell >= 2.9     && < 2.15
