--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ language: c
 addons:
   apt:
     packages:
-    - libgmp-dev
+      - libgmp-dev
 
 # The different configurations we want to test. You could also do things like
 # change flags or use --stack-yaml to point to a different file.
@@ -18,15 +18,17 @@ matrix:
     - env: ARGS="--resolver=lts-14"
     - env: ARGS="--resolver=lts-15"
     - env: ARGS="--resolver=lts-16"
+    - env: ARGS="--resolver=lts-17"
+    - env: ARGS="--resolver=lts-18"
     - env: ARGS="--resolver=nightly"
   allow_failures:
     - env: ARGS="--resolver=nightly"
 
 before_install:
-# Download and unpack the stack executable
-- mkdir -p ~/.local/bin
-- export PATH=$HOME/.local/bin:$PATH
-- travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
+  # Download and unpack the stack executable
+  - mkdir -p ~/.local/bin
+  - export PATH=$HOME/.local/bin:$PATH
+  - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
 
 # This line does all of the work: installs GHC if necessary, build the library,
 # executables, and test suites, and runs the test suites. --no-terminal works
@@ -41,5 +43,5 @@ script:
 # Caching so the next build will be fast too.
 cache:
   directories:
-  - $HOME/.stack
-  - .stack-work
+    - $HOME/.stack
+    - .stack-work
